# airwin2fmod

./: .gitmodules  CMakeLists.txt  README.md
autogen/: CMakeLists.txt
autogen/ADClip7/: CMakeLists.txt  plugin.cpp
autogen/ADClip8/: CMakeLists.txt  plugin.cpp
autogen/ADT/: CMakeLists.txt  plugin.cpp
autogen/AQuickVoiceClip/: CMakeLists.txt  plugin.cpp
autogen/Acceleration/: CMakeLists.txt  plugin.cpp
autogen/Acceleration2/: CMakeLists.txt  plugin.cpp
autogen/Air/: CMakeLists.txt  plugin.cpp
autogen/Air2/: CMakeLists.txt  plugin.cpp
autogen/Air3/: CMakeLists.txt  plugin.cpp
autogen/Air4/: CMakeLists.txt  plugin.cpp
autogen/AngleEQ/: CMakeLists.txt  plugin.cpp
autogen/AngleFilter/: CMakeLists.txt  plugin.cpp
autogen/Apicolypse/: CMakeLists.txt  plugin.cpp
autogen/AtmosphereBuss/: CMakeLists.txt  plugin.cpp
autogen/AtmosphereChannel/: CMakeLists.txt  plugin.cpp
autogen/Aura/: CMakeLists.txt  plugin.cpp
autogen/AutoPan/: CMakeLists.txt  plugin.cpp
autogen/AverMatrix/: CMakeLists.txt  plugin.cpp
autogen/Average/: CMakeLists.txt  plugin.cpp
autogen/Balanced/: CMakeLists.txt  plugin.cpp
autogen/BassAmp/: CMakeLists.txt  plugin.cpp
autogen/BassDrive/: CMakeLists.txt  plugin.cpp
autogen/BassKit/: CMakeLists.txt  plugin.cpp
autogen/Baxandall/: CMakeLists.txt  plugin.cpp
autogen/Baxandall2/: CMakeLists.txt  plugin.cpp
autogen/Beam/: CMakeLists.txt  plugin.cpp
autogen/BezEQ/: CMakeLists.txt  plugin.cpp
autogen/BeziComp/: CMakeLists.txt  plugin.cpp
autogen/BigAmp/: CMakeLists.txt  plugin.cpp
autogen/Biquad/: CMakeLists.txt  plugin.cpp
autogen/Biquad2/: CMakeLists.txt  plugin.cpp
autogen/BiquadDouble/: CMakeLists.txt  plugin.cpp
autogen/BiquadHiLo/: CMakeLists.txt  plugin.cpp
autogen/BiquadNonLin/: CMakeLists.txt  plugin.cpp
autogen/BiquadOneHalf/: CMakeLists.txt  plugin.cpp
autogen/BiquadPlus/: CMakeLists.txt  plugin.cpp
autogen/BiquadStack/: CMakeLists.txt  plugin.cpp
autogen/BiquadTriple/: CMakeLists.txt  plugin.cpp
autogen/BitGlitter/: CMakeLists.txt  plugin.cpp
autogen/BitShiftGain/: CMakeLists.txt  plugin.cpp
autogen/BitShiftPan/: CMakeLists.txt  plugin.cpp
autogen/Bite/: CMakeLists.txt  plugin.cpp
autogen/BlockParty/: CMakeLists.txt  plugin.cpp
autogen/BrassRider/: CMakeLists.txt  plugin.cpp
autogen/BrightAmbience/: CMakeLists.txt  plugin.cpp
autogen/BrightAmbience2/: CMakeLists.txt  plugin.cpp
autogen/BrightAmbience3/: CMakeLists.txt  plugin.cpp
autogen/BuildATPDF/: CMakeLists.txt  plugin.cpp
autogen/BussColors4/: CMakeLists.txt  plugin.cpp
autogen/ButterComp/: CMakeLists.txt  plugin.cpp
autogen/ButterComp2/: CMakeLists.txt  plugin.cpp
autogen/C5RawBuss/: CMakeLists.txt  plugin.cpp
autogen/C5RawChannel/: CMakeLists.txt  plugin.cpp
autogen/CStrip2/: CMakeLists.txt  plugin.cpp
autogen/Cabs/: CMakeLists.txt  plugin.cpp
autogen/Calibre/: CMakeLists.txt  plugin.cpp
autogen/Cans/: CMakeLists.txt  plugin.cpp
autogen/CansAW/: CMakeLists.txt  plugin.cpp
autogen/Capacitor/: CMakeLists.txt  plugin.cpp
autogen/Capacitor2/: CMakeLists.txt  plugin.cpp
autogen/Chamber/: CMakeLists.txt  plugin.cpp
autogen/Chamber2/: CMakeLists.txt  plugin.cpp
autogen/Channel4/: CMakeLists.txt  plugin.cpp
autogen/Channel5/: CMakeLists.txt  plugin.cpp
autogen/Channel6/: CMakeLists.txt  plugin.cpp
autogen/Channel7/: CMakeLists.txt  plugin.cpp
autogen/Channel8/: CMakeLists.txt  plugin.cpp
autogen/Channel9/: CMakeLists.txt  plugin.cpp
autogen/ChimeyGuitar/: CMakeLists.txt  plugin.cpp
autogen/Chorus/: CMakeLists.txt  plugin.cpp
autogen/ChorusEnsemble/: CMakeLists.txt  plugin.cpp
autogen/ChromeOxide/: CMakeLists.txt  plugin.cpp
autogen/Cider/: CMakeLists.txt  plugin.cpp
autogen/ClearCoat/: CMakeLists.txt  plugin.cpp
autogen/ClipOnly2/: CMakeLists.txt  plugin.cpp
autogen/ClipSoftly/: CMakeLists.txt  plugin.cpp
autogen/CloudCoat/: CMakeLists.txt  plugin.cpp
autogen/Coils/: CMakeLists.txt  plugin.cpp
autogen/Coils2/: CMakeLists.txt  plugin.cpp
autogen/Cojones/: CMakeLists.txt  plugin.cpp
autogen/Compresaturator/: CMakeLists.txt  plugin.cpp
autogen/Console0Buss/: CMakeLists.txt  plugin.cpp
autogen/Console0Channel/: CMakeLists.txt  plugin.cpp
autogen/Console4Buss/: CMakeLists.txt  plugin.cpp
autogen/Console4Channel/: CMakeLists.txt  plugin.cpp
autogen/Console5Buss/: CMakeLists.txt  plugin.cpp
autogen/Console5Channel/: CMakeLists.txt  plugin.cpp
autogen/Console5DarkCh/: CMakeLists.txt  plugin.cpp
autogen/Console6Buss/: CMakeLists.txt  plugin.cpp
autogen/Console6Channel/: CMakeLists.txt  plugin.cpp
autogen/Console7Buss/: CMakeLists.txt  plugin.cpp
autogen/Console7Cascade/: CMakeLists.txt  plugin.cpp
autogen/Console7Channel/: CMakeLists.txt  plugin.cpp
autogen/Console7Crunch/: CMakeLists.txt  plugin.cpp
autogen/Console8BussHype/: CMakeLists.txt  plugin.cpp
autogen/Console8BussIn/: CMakeLists.txt  plugin.cpp
autogen/Console8BussOut/: CMakeLists.txt  plugin.cpp
autogen/Console8ChannelHype/: CMakeLists.txt  plugin.cpp
autogen/Console8ChannelIn/: CMakeLists.txt  plugin.cpp
autogen/Console8ChannelOut/: CMakeLists.txt  plugin.cpp
autogen/Console8LiteBuss/: CMakeLists.txt  plugin.cpp
autogen/Console8LiteChannel/: CMakeLists.txt  plugin.cpp
autogen/Console8SubHype/: CMakeLists.txt  plugin.cpp
autogen/Console8SubIn/: CMakeLists.txt  plugin.cpp
autogen/Console8SubOut/: CMakeLists.txt  plugin.cpp
autogen/Console9Buss/: CMakeLists.txt  plugin.cpp
autogen/Console9Channel/: CMakeLists.txt  plugin.cpp
autogen/ConsoleLABuss/: CMakeLists.txt  plugin.cpp
autogen/ConsoleLAChannel/: CMakeLists.txt  plugin.cpp
autogen/ConsoleMCBuss/: CMakeLists.txt  plugin.cpp
autogen/ConsoleMCChannel/: CMakeLists.txt  plugin.cpp
autogen/ConsoleMDBuss/: CMakeLists.txt  plugin.cpp
autogen/ConsoleMDChannel/: CMakeLists.txt  plugin.cpp
autogen/ContentHideD/: CMakeLists.txt  plugin.cpp
autogen/CreamCoat/: CMakeLists.txt  plugin.cpp
autogen/Creature/: CMakeLists.txt  plugin.cpp
autogen/CrickBass/: CMakeLists.txt  (+1 more)
generator/: CMakeLists.txt
(+686 files in other folders)
