cmake_minimum_required(VERSION 3.20)
project(autogen)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_C_STANDARD 17)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
  set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDebugDll")
else()
  set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDll")
  set(CMAKE_C_VISIBILITY_PRESET hidden)
  set(CMAKE_CXX_VISIBILITY_PRESET hidden)
  set(CMAKE_VISIBILITY_INLINES_HIDDEN YES)
  set(CMAKE_POSITION_INDEPENDENT_CODE ON)
endif()
list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake"
     "${CMAKE_SOURCE_DIR}/cmake/modules")
include(CheckIPOSupported)
find_package(Threads REQUIRED)
find_package(FMOD MODULE REQUIRED)
if(NOT TARGET airwin-registry)
  add_subdirectory("${CMAKE_SOURCE_DIR}/external/airwin2rack"
                   "${CMAKE_BINARY_DIR}/external/airwin2rack-build")
endif()
add_library(plugin_iface INTERFACE)
target_compile_features(plugin_iface INTERFACE cxx_std_20)
target_include_directories(
  plugin_iface INTERFACE "$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>"
                         "$<INSTALL_INTERFACE:include>")
target_compile_definitions(
  plugin_iface
  INTERFACE
    "$<$<PLATFORM_ID:Windows>:NOMINMAX>"
    "$<$<PLATFORM_ID:Windows>:_CRT_SECURE_NO_WARNINGS>"
    "$<$<PLATFORM_ID:Windows>:_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES=1>"
    "$<$<PLATFORM_ID:Windows>:_CRT_SECURE_CPP_OVERLOAD_STANDARD_NAMES_COUNT=1>")
target_compile_options(plugin_iface
                       INTERFACE "$<$<CXX_COMPILER_ID:MSVC>:/utf-8;/bigobj>")
target_link_options(
  plugin_iface INTERFACE
  "$<$<AND:$<PLATFORM_ID:Windows>,$<CXX_COMPILER_ID:MSVC>>:/STACK:8388608>")
target_link_libraries(plugin_iface INTERFACE Threads::Threads FMOD::FMOD
                                             airwin-registry)
function(add_airwindows_plugin plugin_name)
  add_library(${plugin_name} SHARED ${ARGN})
  set_property(TARGET ${plugin_name} PROPERTY OUTPUT_NAME ${plugin_name})
  target_link_libraries(${plugin_name} PRIVATE plugin_iface)
  if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND NOT CMAKE_CXX_COMPILER_ID MATCHES
                                           "MSVC")
    find_program(CLANG_TIDY_EXE NAMES "clang-tidy")
    if(CLANG_TIDY_EXE)
      set_target_properties(
        ${plugin_name}
        PROPERTIES
          CXX_CLANG_TIDY
          "${CLANG_TIDY_EXE};-checks=-*,bugprone-*,clang-*,concurrency-*,modernize-*,performance-*"
      )
    endif()
  endif()
  check_ipo_supported()
  set_property(TARGET ${plugin_name} PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
  if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
    set_target_properties(${plugin_name} PROPERTIES UNITY_BUILD ON)
    set_target_properties(${plugin_name} PROPERTIES LINK_WHAT_YOU_USE TRUE)
    target_compile_options(
      ${plugin_name}
      PRIVATE
        $<$<AND:$<COMPILE_LANGUAGE:C>,$<C_COMPILER_ID:GNU,Clang,AppleClang>>:-ffunction-sections
        -fdata-sections>
        $<$<AND:$<COMPILE_LANGUAGE:CXX>,$<CXX_COMPILER_ID:GNU,Clang,AppleClang>>:-ffunction-sections
        -fdata-sections>
        $<$<AND:$<COMPILE_LANGUAGE:C,CXX>,$<C_COMPILER_ID:MSVC>>:/Gy
        /Gw>
        $<$<AND:$<COMPILE_LANGUAGE:C,CXX>,$<C_COMPILER_ID:IntelLLVM>>:-ffunction-sections
        -fdata-sections>)
    target_link_options(
      ${plugin_name}
      PRIVATE
      $<$<CXX_COMPILER_ID:GNU,Clang,AppleClang>:-Wl,--gc-sections>
      $<$<CXX_COMPILER_ID:GNU,Clang>:-Wl,--icf=all>
      $<$<CXX_COMPILER_ID:MSVC>:/OPT:ICF
      /OPT:REF>)
  endif()
  install(FILES "$<TARGET_FILE:${plugin_name}>" DESTINATION ".")
endfunction()

message(STATUS "Configuring ADClip7")
add_subdirectory(ADClip7)
message(STATUS "Configuring ADClip8")
add_subdirectory(ADClip8)
message(STATUS "Configuring ADT")
add_subdirectory(ADT)
message(STATUS "Configuring AQuickVoiceClip")
add_subdirectory(AQuickVoiceClip)
message(STATUS "Configuring Acceleration")
add_subdirectory(Acceleration)
message(STATUS "Configuring Acceleration2")
add_subdirectory(Acceleration2)
message(STATUS "Configuring Air")
add_subdirectory(Air)
message(STATUS "Configuring Air2")
add_subdirectory(Air2)
message(STATUS "Configuring Air3")
add_subdirectory(Air3)
message(STATUS "Configuring Air4")
add_subdirectory(Air4)
message(STATUS "Configuring AngleEQ")
add_subdirectory(AngleEQ)
message(STATUS "Configuring AngleFilter")
add_subdirectory(AngleFilter)
message(STATUS "Configuring Apicolypse")
add_subdirectory(Apicolypse)
message(STATUS "Configuring AtmosphereBuss")
add_subdirectory(AtmosphereBuss)
message(STATUS "Configuring AtmosphereChannel")
add_subdirectory(AtmosphereChannel)
message(STATUS "Configuring Aura")
add_subdirectory(Aura)
message(STATUS "Configuring AutoPan")
add_subdirectory(AutoPan)
message(STATUS "Configuring AverMatrix")
add_subdirectory(AverMatrix)
message(STATUS "Configuring Average")
add_subdirectory(Average)
message(STATUS "Configuring Balanced")
add_subdirectory(Balanced)
message(STATUS "Configuring BassAmp")
add_subdirectory(BassAmp)
message(STATUS "Configuring BassDrive")
add_subdirectory(BassDrive)
message(STATUS "Configuring BassKit")
add_subdirectory(BassKit)
message(STATUS "Configuring Baxandall")
add_subdirectory(Baxandall)
message(STATUS "Configuring Baxandall2")
add_subdirectory(Baxandall2)
message(STATUS "Configuring Beam")
add_subdirectory(Beam)
message(STATUS "Configuring BezEQ")
add_subdirectory(BezEQ)
message(STATUS "Configuring BeziComp")
add_subdirectory(BeziComp)
message(STATUS "Configuring BigAmp")
add_subdirectory(BigAmp)
message(STATUS "Configuring Biquad")
add_subdirectory(Biquad)
message(STATUS "Configuring Biquad2")
add_subdirectory(Biquad2)
message(STATUS "Configuring BiquadDouble")
add_subdirectory(BiquadDouble)
message(STATUS "Configuring BiquadHiLo")
add_subdirectory(BiquadHiLo)
message(STATUS "Configuring BiquadNonLin")
add_subdirectory(BiquadNonLin)
message(STATUS "Configuring BiquadOneHalf")
add_subdirectory(BiquadOneHalf)
message(STATUS "Configuring BiquadPlus")
add_subdirectory(BiquadPlus)
message(STATUS "Configuring BiquadStack")
add_subdirectory(BiquadStack)
message(STATUS "Configuring BiquadTriple")
add_subdirectory(BiquadTriple)
message(STATUS "Configuring BitGlitter")
add_subdirectory(BitGlitter)
message(STATUS "Configuring BitShiftGain")
add_subdirectory(BitShiftGain)
message(STATUS "Configuring BitShiftPan")
add_subdirectory(BitShiftPan)
message(STATUS "Configuring Bite")
add_subdirectory(Bite)
message(STATUS "Configuring BlockParty")
add_subdirectory(BlockParty)
message(STATUS "Configuring BrassRider")
add_subdirectory(BrassRider)
message(STATUS "Configuring BrightAmbience")
add_subdirectory(BrightAmbience)
message(STATUS "Configuring BrightAmbience2")
add_subdirectory(BrightAmbience2)
message(STATUS "Configuring BrightAmbience3")
add_subdirectory(BrightAmbience3)
message(STATUS "Configuring BuildATPDF")
add_subdirectory(BuildATPDF)
message(STATUS "Configuring BussColors4")
add_subdirectory(BussColors4)
message(STATUS "Configuring ButterComp")
add_subdirectory(ButterComp)
message(STATUS "Configuring ButterComp2")
add_subdirectory(ButterComp2)
message(STATUS "Configuring C5RawBuss")
add_subdirectory(C5RawBuss)
message(STATUS "Configuring C5RawChannel")
add_subdirectory(C5RawChannel)
message(STATUS "Configuring CStrip2")
add_subdirectory(CStrip2)
message(STATUS "Configuring Cabs")
add_subdirectory(Cabs)
message(STATUS "Configuring Calibre")
add_subdirectory(Calibre)
message(STATUS "Configuring Cans")
add_subdirectory(Cans)
message(STATUS "Configuring CansAW")
add_subdirectory(CansAW)
message(STATUS "Configuring Capacitor")
add_subdirectory(Capacitor)
message(STATUS "Configuring Capacitor2")
add_subdirectory(Capacitor2)
message(STATUS "Configuring Chamber")
add_subdirectory(Chamber)
message(STATUS "Configuring Chamber2")
add_subdirectory(Chamber2)
message(STATUS "Configuring Channel4")
add_subdirectory(Channel4)
message(STATUS "Configuring Channel5")
add_subdirectory(Channel5)
message(STATUS "Configuring Channel6")
add_subdirectory(Channel6)
message(STATUS "Configuring Channel7")
add_subdirectory(Channel7)
message(STATUS "Configuring Channel8")
add_subdirectory(Channel8)
message(STATUS "Configuring Channel9")
add_subdirectory(Channel9)
message(STATUS "Configuring ChimeyGuitar")
add_subdirectory(ChimeyGuitar)
message(STATUS "Configuring Chorus")
add_subdirectory(Chorus)
message(STATUS "Configuring ChorusEnsemble")
add_subdirectory(ChorusEnsemble)
message(STATUS "Configuring ChromeOxide")
add_subdirectory(ChromeOxide)
message(STATUS "Configuring Cider")
add_subdirectory(Cider)
message(STATUS "Configuring ClearCoat")
add_subdirectory(ClearCoat)
message(STATUS "Configuring ClipOnly2")
add_subdirectory(ClipOnly2)
message(STATUS "Configuring ClipSoftly")
add_subdirectory(ClipSoftly)
message(STATUS "Configuring CloudCoat")
add_subdirectory(CloudCoat)
message(STATUS "Configuring Coils")
add_subdirectory(Coils)
message(STATUS "Configuring Coils2")
add_subdirectory(Coils2)
message(STATUS "Configuring Cojones")
add_subdirectory(Cojones)
message(STATUS "Configuring Compresaturator")
add_subdirectory(Compresaturator)
message(STATUS "Configuring Console0Buss")
add_subdirectory(Console0Buss)
message(STATUS "Configuring Console0Channel")
add_subdirectory(Console0Channel)
message(STATUS "Configuring Console4Buss")
add_subdirectory(Console4Buss)
message(STATUS "Configuring Console4Channel")
add_subdirectory(Console4Channel)
message(STATUS "Configuring Console5Buss")
add_subdirectory(Console5Buss)
message(STATUS "Configuring Console5Channel")
add_subdirectory(Console5Channel)
message(STATUS "Configuring Console5DarkCh")
add_subdirectory(Console5DarkCh)
message(STATUS "Configuring Console6Buss")
add_subdirectory(Console6Buss)
message(STATUS "Configuring Console6Channel")
add_subdirectory(Console6Channel)
message(STATUS "Configuring Console7Buss")
add_subdirectory(Console7Buss)
message(STATUS "Configuring Console7Cascade")
add_subdirectory(Console7Cascade)
message(STATUS "Configuring Console7Channel")
add_subdirectory(Console7Channel)
message(STATUS "Configuring Console7Crunch")
add_subdirectory(Console7Crunch)
message(STATUS "Configuring Console8BussHype")
add_subdirectory(Console8BussHype)
message(STATUS "Configuring Console8BussIn")
add_subdirectory(Console8BussIn)
message(STATUS "Configuring Console8BussOut")
add_subdirectory(Console8BussOut)
message(STATUS "Configuring Console8ChannelHype")
add_subdirectory(Console8ChannelHype)
message(STATUS "Configuring Console8ChannelIn")
add_subdirectory(Console8ChannelIn)
message(STATUS "Configuring Console8ChannelOut")
add_subdirectory(Console8ChannelOut)
message(STATUS "Configuring Console8LiteBuss")
add_subdirectory(Console8LiteBuss)
message(STATUS "Configuring Console8LiteChannel")
add_subdirectory(Console8LiteChannel)
message(STATUS "Configuring Console8SubHype")
add_subdirectory(Console8SubHype)
message(STATUS "Configuring Console8SubIn")
add_subdirectory(Console8SubIn)
message(STATUS "Configuring Console8SubOut")
add_subdirectory(Console8SubOut)
message(STATUS "Configuring Console9Buss")
add_subdirectory(Console9Buss)
message(STATUS "Configuring Console9Channel")
add_subdirectory(Console9Channel)
message(STATUS "Configuring ConsoleLABuss")
add_subdirectory(ConsoleLABuss)
message(STATUS "Configuring ConsoleLAChannel")
add_subdirectory(ConsoleLAChannel)
message(STATUS "Configuring ConsoleMCBuss")
add_subdirectory(ConsoleMCBuss)
message(STATUS "Configuring ConsoleMCChannel")
add_subdirectory(ConsoleMCChannel)
message(STATUS "Configuring ConsoleMDBuss")
add_subdirectory(ConsoleMDBuss)
message(STATUS "Configuring ConsoleMDChannel")
add_subdirectory(ConsoleMDChannel)
message(STATUS "Configuring ContentHideD")
add_subdirectory(ContentHideD)
message(STATUS "Configuring CreamCoat")
add_subdirectory(CreamCoat)
message(STATUS "Configuring Creature")
add_subdirectory(Creature)
message(STATUS "Configuring CrickBass")
add_subdirectory(CrickBass)
message(STATUS "Configuring CrunchCoat")
add_subdirectory(CrunchCoat)
message(STATUS "Configuring CrunchyGrooveWear")
add_subdirectory(CrunchyGrooveWear)
message(STATUS "Configuring Crystal")
add_subdirectory(Crystal)
message(STATUS "Configuring DCVoltage")
add_subdirectory(DCVoltage)
message(STATUS "Configuring Dark")
add_subdirectory(Dark)
message(STATUS "Configuring DarkNoise")
add_subdirectory(DarkNoise)
message(STATUS "Configuring DeBess")
add_subdirectory(DeBess)
message(STATUS "Configuring DeCrackle")
add_subdirectory(DeCrackle)
message(STATUS "Configuring DeEss")
add_subdirectory(DeEss)
message(STATUS "Configuring DeHiss")
add_subdirectory(DeHiss)
message(STATUS "Configuring DeRez")
add_subdirectory(DeRez)
message(STATUS "Configuring DeRez2")
add_subdirectory(DeRez2)
message(STATUS "Configuring DeRez3")
add_subdirectory(DeRez3)
message(STATUS "Configuring Deckwrecka")
add_subdirectory(Deckwrecka)
message(STATUS "Configuring Density")
add_subdirectory(Density)
message(STATUS "Configuring Density2")
add_subdirectory(Density2)
message(STATUS "Configuring Desk")
add_subdirectory(Desk)
message(STATUS "Configuring Desk4")
add_subdirectory(Desk4)
message(STATUS "Configuring DigitalBlack")
add_subdirectory(DigitalBlack)
message(STATUS "Configuring Dirt")
add_subdirectory(Dirt)
message(STATUS "Configuring Discontinuity")
add_subdirectory(Discontinuity)
message(STATUS "Configuring Disintegrate")
add_subdirectory(Disintegrate)
message(STATUS "Configuring Distance")
add_subdirectory(Distance)
message(STATUS "Configuring Distance2")
add_subdirectory(Distance2)
message(STATUS "Configuring Distance3")
add_subdirectory(Distance3)
message(STATUS "Configuring Distortion")
add_subdirectory(Distortion)
message(STATUS "Configuring DitherFloat")
add_subdirectory(DitherFloat)
message(STATUS "Configuring DitherMeDiskers")
add_subdirectory(DitherMeDiskers)
message(STATUS "Configuring DitherMeTimbers")
add_subdirectory(DitherMeTimbers)
message(STATUS "Configuring Ditherbox")
add_subdirectory(Ditherbox)
message(STATUS "Configuring DoublePaul")
add_subdirectory(DoublePaul)
message(STATUS "Configuring Doublelay")
add_subdirectory(Doublelay)
message(STATUS "Configuring Drive")
add_subdirectory(Drive)
message(STATUS "Configuring DrumSlam")
add_subdirectory(DrumSlam)
message(STATUS "Configuring DubCenter")
add_subdirectory(DubCenter)
message(STATUS "Configuring DubPlate")
add_subdirectory(DubPlate)
message(STATUS "Configuring DubPlate2")
add_subdirectory(DubPlate2)
message(STATUS "Configuring DubSub")
add_subdirectory(DubSub)
message(STATUS "Configuring DubSub2")
add_subdirectory(DubSub2)
message(STATUS "Configuring Dubly")
add_subdirectory(Dubly)
message(STATUS "Configuring Dubly2")
add_subdirectory(Dubly2)
message(STATUS "Configuring Dubly3")
add_subdirectory(Dubly3)
message(STATUS "Configuring DustBunny")
add_subdirectory(DustBunny)
message(STATUS "Configuring Dynamics")
add_subdirectory(Dynamics)
message(STATUS "Configuring Dyno")
add_subdirectory(Dyno)
message(STATUS "Configuring EQ")
add_subdirectory(EQ)
message(STATUS "Configuring EdIsDim")
add_subdirectory(EdIsDim)
message(STATUS "Configuring Edge")
add_subdirectory(Edge)
message(STATUS "Configuring Elation")
add_subdirectory(Elation)
message(STATUS "Configuring ElectroHat")
add_subdirectory(ElectroHat)
message(STATUS "Configuring Elliptical")
add_subdirectory(Elliptical)
message(STATUS "Configuring Energy")
add_subdirectory(Energy)
message(STATUS "Configuring Energy2")
add_subdirectory(Energy2)
message(STATUS "Configuring Ensemble")
add_subdirectory(Ensemble)
message(STATUS "Configuring EveryConsole")
add_subdirectory(EveryConsole)
message(STATUS "Configuring EverySlew")
add_subdirectory(EverySlew)
message(STATUS "Configuring EveryTrim")
add_subdirectory(EveryTrim)
message(STATUS "Configuring Exciter")
add_subdirectory(Exciter)
message(STATUS "Configuring Facet")
add_subdirectory(Facet)
message(STATUS "Configuring FathomFive")
add_subdirectory(FathomFive)
message(STATUS "Configuring FinalClip")
add_subdirectory(FinalClip)
message(STATUS "Configuring FireAmp")
add_subdirectory(FireAmp)
message(STATUS "Configuring Flipity")
add_subdirectory(Flipity)
message(STATUS "Configuring Floor")
add_subdirectory(Floor)
message(STATUS "Configuring Flutter")
add_subdirectory(Flutter)
message(STATUS "Configuring Flutter2")
add_subdirectory(Flutter2)
message(STATUS "Configuring Focus")
add_subdirectory(Focus)
message(STATUS "Configuring Fracture")
add_subdirectory(Fracture)
message(STATUS "Configuring Fracture2")
add_subdirectory(Fracture2)
message(STATUS "Configuring FromTape")
add_subdirectory(FromTape)
message(STATUS "Configuring Galactic")
add_subdirectory(Galactic)
message(STATUS "Configuring Galactic2")
add_subdirectory(Galactic2)
message(STATUS "Configuring Galactic3")
add_subdirectory(Galactic3)
message(STATUS "Configuring GalacticVibe")
add_subdirectory(GalacticVibe)
message(STATUS "Configuring Gatelope")
add_subdirectory(Gatelope)
message(STATUS "Configuring GlitchShifter")
add_subdirectory(GlitchShifter)
message(STATUS "Configuring GoldenSlew")
add_subdirectory(GoldenSlew)
message(STATUS "Configuring Golem")
add_subdirectory(Golem)
message(STATUS "Configuring GrindAmp")
add_subdirectory(GrindAmp)
message(STATUS "Configuring Gringer")
add_subdirectory(Gringer)
message(STATUS "Configuring GrooveWear")
add_subdirectory(GrooveWear)
message(STATUS "Configuring GuitarConditioner")
add_subdirectory(GuitarConditioner)
message(STATUS "Configuring HardVacuum")
add_subdirectory(HardVacuum)
message(STATUS "Configuring HermeTrim")
add_subdirectory(HermeTrim)
message(STATUS "Configuring Hermepass")
add_subdirectory(Hermepass)
message(STATUS "Configuring HighGlossDither")
add_subdirectory(HighGlossDither)
message(STATUS "Configuring HighImpact")
add_subdirectory(HighImpact)
message(STATUS "Configuring Highpass")
add_subdirectory(Highpass)
message(STATUS "Configuring Highpass2")
add_subdirectory(Highpass2)
message(STATUS "Configuring Holt")
add_subdirectory(Holt)
message(STATUS "Configuring Holt2")
add_subdirectory(Holt2)
message(STATUS "Configuring Hombre")
add_subdirectory(Hombre)
message(STATUS "Configuring Huge")
add_subdirectory(Huge)
message(STATUS "Configuring Hull")
add_subdirectory(Hull)
message(STATUS "Configuring Hull2")
add_subdirectory(Hull2)
message(STATUS "Configuring Hype")
add_subdirectory(Hype)
message(STATUS "Configuring Hypersoft")
add_subdirectory(Hypersoft)
message(STATUS "Configuring HypersonX")
add_subdirectory(HypersonX)
message(STATUS "Configuring Hypersonic")
add_subdirectory(Hypersonic)
message(STATUS "Configuring Infinity")
add_subdirectory(Infinity)
message(STATUS "Configuring Infinity2")
add_subdirectory(Infinity2)
message(STATUS "Configuring Inflamer")
add_subdirectory(Inflamer)
message(STATUS "Configuring Infrasonic")
add_subdirectory(Infrasonic)
message(STATUS "Configuring Interstage")
add_subdirectory(Interstage)
message(STATUS "Configuring IronOxide5")
add_subdirectory(IronOxide5)
message(STATUS "Configuring IronOxideClassic")
add_subdirectory(IronOxideClassic)
message(STATUS "Configuring IronOxideClassic2")
add_subdirectory(IronOxideClassic2)
message(STATUS "Configuring Isolator")
add_subdirectory(Isolator)
message(STATUS "Configuring Isolator2")
add_subdirectory(Isolator2)
message(STATUS "Configuring Isolator3")
add_subdirectory(Isolator3)
message(STATUS "Configuring Kalman")
add_subdirectory(Kalman)
message(STATUS "Configuring LRConvolve")
add_subdirectory(LRConvolve)
message(STATUS "Configuring LRConvolve2")
add_subdirectory(LRConvolve2)
message(STATUS "Configuring LRFlipTimer")
add_subdirectory(LRFlipTimer)
message(STATUS "Configuring LeadAmp")
add_subdirectory(LeadAmp)
message(STATUS "Configuring LeftoMono")
add_subdirectory(LeftoMono)
message(STATUS "Configuring LilAmp")
add_subdirectory(LilAmp)
message(STATUS "Configuring Logical4")
add_subdirectory(Logical4)
message(STATUS "Configuring Loud")
add_subdirectory(Loud)
message(STATUS "Configuring Lowpass")
add_subdirectory(Lowpass)
message(STATUS "Configuring Lowpass2")
add_subdirectory(Lowpass2)
message(STATUS "Configuring Luxor")
add_subdirectory(Luxor)
message(STATUS "Configuring MSFlipTimer")
add_subdirectory(MSFlipTimer)
message(STATUS "Configuring MV")
add_subdirectory(MV)
message(STATUS "Configuring MV2")
add_subdirectory(MV2)
message(STATUS "Configuring MackEQ")
add_subdirectory(MackEQ)
message(STATUS "Configuring Mackity")
add_subdirectory(Mackity)
message(STATUS "Configuring Mastering")
add_subdirectory(Mastering)
message(STATUS "Configuring Mastering2")
add_subdirectory(Mastering2)
message(STATUS "Configuring MatrixVerb")
add_subdirectory(MatrixVerb)
message(STATUS "Configuring Melt")
add_subdirectory(Melt)
message(STATUS "Configuring MidAmp")
add_subdirectory(MidAmp)
message(STATUS "Configuring MidSide")
add_subdirectory(MidSide)
message(STATUS "Configuring MoNoam")
add_subdirectory(MoNoam)
message(STATUS "Configuring Mojo")
add_subdirectory(Mojo)
message(STATUS "Configuring Monitoring")
add_subdirectory(Monitoring)
message(STATUS "Configuring Monitoring2")
add_subdirectory(Monitoring2)
message(STATUS "Configuring Monitoring3")
add_subdirectory(Monitoring3)
message(STATUS "Configuring MultiBandDistortion")
add_subdirectory(MultiBandDistortion)
message(STATUS "Configuring NCSeventeen")
add_subdirectory(NCSeventeen)
message(STATUS "Configuring NaturalizeDither")
add_subdirectory(NaturalizeDither)
message(STATUS "Configuring Neverland")
add_subdirectory(Neverland)
message(STATUS "Configuring Nikola")
add_subdirectory(Nikola)
message(STATUS "Configuring NodeDither")
add_subdirectory(NodeDither)
message(STATUS "Configuring Noise")
add_subdirectory(Noise)
message(STATUS "Configuring NonlinearSpace")
add_subdirectory(NonlinearSpace)
message(STATUS "Configuring NotJustAnotherCD")
add_subdirectory(NotJustAnotherCD)
message(STATUS "Configuring NotJustAnotherDither")
add_subdirectory(NotJustAnotherDither)
message(STATUS "Configuring OneCornerClip")
add_subdirectory(OneCornerClip)
message(STATUS "Configuring OrbitKick")
add_subdirectory(OrbitKick)
message(STATUS "Configuring Overheads")
add_subdirectory(Overheads)
message(STATUS "Configuring PDBuss")
add_subdirectory(PDBuss)
message(STATUS "Configuring PDChannel")
add_subdirectory(PDChannel)
message(STATUS "Configuring Pafnuty2")
add_subdirectory(Pafnuty2)
message(STATUS "Configuring Parametric")
add_subdirectory(Parametric)
message(STATUS "Configuring PaulDither")
add_subdirectory(PaulDither)
message(STATUS "Configuring PaulWide")
add_subdirectory(PaulWide)
message(STATUS "Configuring PeaksOnly")
add_subdirectory(PeaksOnly)
message(STATUS "Configuring Pear")
add_subdirectory(Pear)
message(STATUS "Configuring Pear2")
add_subdirectory(Pear2)
message(STATUS "Configuring PhaseNudge")
add_subdirectory(PhaseNudge)
message(STATUS "Configuring PitchDelay")
add_subdirectory(PitchDelay)
message(STATUS "Configuring PitchNasty")
add_subdirectory(PitchNasty)
message(STATUS "Configuring PlatinumSlew")
add_subdirectory(PlatinumSlew)
message(STATUS "Configuring PocketVerbs")
add_subdirectory(PocketVerbs)
message(STATUS "Configuring Pockey")
add_subdirectory(Pockey)
message(STATUS "Configuring Pockey2")
add_subdirectory(Pockey2)
message(STATUS "Configuring Podcast")
add_subdirectory(Podcast)
message(STATUS "Configuring PodcastDeluxe")
add_subdirectory(PodcastDeluxe)
message(STATUS "Configuring Point")
add_subdirectory(Point)
message(STATUS "Configuring PointyDeluxe")
add_subdirectory(PointyDeluxe)
message(STATUS "Configuring PointyGuitar")
add_subdirectory(PointyGuitar)
message(STATUS "Configuring Pop")
add_subdirectory(Pop)
message(STATUS "Configuring Pop2")
add_subdirectory(Pop2)
message(STATUS "Configuring Pop3")
add_subdirectory(Pop3)
message(STATUS "Configuring PowerSag")
add_subdirectory(PowerSag)
message(STATUS "Configuring PowerSag2")
add_subdirectory(PowerSag2)
message(STATUS "Configuring Precious")
add_subdirectory(Precious)
message(STATUS "Configuring Preponderant")
add_subdirectory(Preponderant)
message(STATUS "Configuring Pressure4")
add_subdirectory(Pressure4)
message(STATUS "Configuring Pressure5")
add_subdirectory(Pressure5)
message(STATUS "Configuring Pressure6")
add_subdirectory(Pressure6)
message(STATUS "Configuring PrimeFIR")
add_subdirectory(PrimeFIR)
message(STATUS "Configuring PurestAir")
add_subdirectory(PurestAir)
message(STATUS "Configuring PurestConsole2Buss")
add_subdirectory(PurestConsole2Buss)
message(STATUS "Configuring PurestConsole2Channel")
add_subdirectory(PurestConsole2Channel)
message(STATUS "Configuring PurestConsole3Buss")
add_subdirectory(PurestConsole3Buss)
message(STATUS "Configuring PurestConsole3Channel")
add_subdirectory(PurestConsole3Channel)
message(STATUS "Configuring PurestConsoleBuss")
add_subdirectory(PurestConsoleBuss)
message(STATUS "Configuring PurestConsoleChannel")
add_subdirectory(PurestConsoleChannel)
message(STATUS "Configuring PurestDrive")
add_subdirectory(PurestDrive)
message(STATUS "Configuring PurestEcho")
add_subdirectory(PurestEcho)
message(STATUS "Configuring PurestFade")
add_subdirectory(PurestFade)
message(STATUS "Configuring PurestGain")
add_subdirectory(PurestGain)
message(STATUS "Configuring PurestSquish")
add_subdirectory(PurestSquish)
message(STATUS "Configuring PurestWarm")
add_subdirectory(PurestWarm)
message(STATUS "Configuring PurestWarm2")
add_subdirectory(PurestWarm2)
message(STATUS "Configuring Pyewacket")
add_subdirectory(Pyewacket)
message(STATUS "Configuring RawGlitters")
add_subdirectory(RawGlitters)
message(STATUS "Configuring RawTimbers")
add_subdirectory(RawTimbers)
message(STATUS "Configuring Recurve")
add_subdirectory(Recurve)
message(STATUS "Configuring Remap")
add_subdirectory(Remap)
message(STATUS "Configuring ResEQ")
add_subdirectory(ResEQ)
message(STATUS "Configuring ResEQ2")
add_subdirectory(ResEQ2)
message(STATUS "Configuring Reverb")
add_subdirectory(Reverb)
message(STATUS "Configuring Righteous4")
add_subdirectory(Righteous4)
message(STATUS "Configuring RightoMono")
add_subdirectory(RightoMono)
message(STATUS "Configuring RingModulator")
add_subdirectory(RingModulator)
message(STATUS "Configuring SampleDelay")
add_subdirectory(SampleDelay)
message(STATUS "Configuring Shape")
add_subdirectory(Shape)
message(STATUS "Configuring ShortBuss")
add_subdirectory(ShortBuss)
message(STATUS "Configuring SideDull")
add_subdirectory(SideDull)
message(STATUS "Configuring Sidepass")
add_subdirectory(Sidepass)
message(STATUS "Configuring Silhouette")
add_subdirectory(Silhouette)
message(STATUS "Configuring Silken")
add_subdirectory(Silken)
message(STATUS "Configuring Sinew")
add_subdirectory(Sinew)
message(STATUS "Configuring SingleEndedTriode")
add_subdirectory(SingleEndedTriode)
message(STATUS "Configuring Slew")
add_subdirectory(Slew)
message(STATUS "Configuring Slew2")
add_subdirectory(Slew2)
message(STATUS "Configuring Slew3")
add_subdirectory(Slew3)
message(STATUS "Configuring SlewOnly")
add_subdirectory(SlewOnly)
message(STATUS "Configuring SlewSonic")
add_subdirectory(SlewSonic)
message(STATUS "Configuring Smooth")
add_subdirectory(Smooth)
message(STATUS "Configuring SmoothEQ")
add_subdirectory(SmoothEQ)
message(STATUS "Configuring SmoothEQ2")
add_subdirectory(SmoothEQ2)
message(STATUS "Configuring SoftClock")
add_subdirectory(SoftClock)
message(STATUS "Configuring SoftGate")
add_subdirectory(SoftGate)
message(STATUS "Configuring SpatializeDither")
add_subdirectory(SpatializeDither)
message(STATUS "Configuring Spiral")
add_subdirectory(Spiral)
message(STATUS "Configuring Spiral2")
add_subdirectory(Spiral2)
message(STATUS "Configuring SquareRoot")
add_subdirectory(SquareRoot)
message(STATUS "Configuring Srsly")
add_subdirectory(Srsly)
message(STATUS "Configuring Srsly2")
add_subdirectory(Srsly2)
message(STATUS "Configuring Srsly3")
add_subdirectory(Srsly3)
message(STATUS "Configuring StarChild")
add_subdirectory(StarChild)
message(STATUS "Configuring StarChild2")
add_subdirectory(StarChild2)
message(STATUS "Configuring StereoChorus")
add_subdirectory(StereoChorus)
message(STATUS "Configuring StereoDoubler")
add_subdirectory(StereoDoubler)
message(STATUS "Configuring StereoEnsemble")
add_subdirectory(StereoEnsemble)
message(STATUS "Configuring StereoFX")
add_subdirectory(StereoFX)
message(STATUS "Configuring StoneFireComp")
add_subdirectory(StoneFireComp)
message(STATUS "Configuring Stonefire")
add_subdirectory(Stonefire)
message(STATUS "Configuring StudioTan")
add_subdirectory(StudioTan)
message(STATUS "Configuring SubTight")
add_subdirectory(SubTight)
message(STATUS "Configuring SubsOnly")
add_subdirectory(SubsOnly)
message(STATUS "Configuring Surge")
add_subdirectory(Surge)
message(STATUS "Configuring SurgeTide")
add_subdirectory(SurgeTide)
message(STATUS "Configuring Sweeten")
add_subdirectory(Sweeten)
message(STATUS "Configuring Swell")
add_subdirectory(Swell)
message(STATUS "Configuring TPDFDither")
add_subdirectory(TPDFDither)
message(STATUS "Configuring TPDFWide")
add_subdirectory(TPDFWide)
message(STATUS "Configuring TakeCare")
add_subdirectory(TakeCare)
message(STATUS "Configuring Tape")
add_subdirectory(Tape)
message(STATUS "Configuring TapeBias")
add_subdirectory(TapeBias)
message(STATUS "Configuring TapeDelay")
add_subdirectory(TapeDelay)
message(STATUS "Configuring TapeDelay2")
add_subdirectory(TapeDelay2)
message(STATUS "Configuring TapeDither")
add_subdirectory(TapeDither)
message(STATUS "Configuring TapeDust")
add_subdirectory(TapeDust)
message(STATUS "Configuring TapeFat")
add_subdirectory(TapeFat)
message(STATUS "Configuring TapeHack")
add_subdirectory(TapeHack)
message(STATUS "Configuring Texturize")
add_subdirectory(Texturize)
message(STATUS "Configuring TexturizeMS")
add_subdirectory(TexturizeMS)
message(STATUS "Configuring Thunder")
add_subdirectory(Thunder)
message(STATUS "Configuring ToTape5")
add_subdirectory(ToTape5)
message(STATUS "Configuring ToTape6")
add_subdirectory(ToTape6)
message(STATUS "Configuring ToTape7")
add_subdirectory(ToTape7)
message(STATUS "Configuring ToTape8")
add_subdirectory(ToTape8)
message(STATUS "Configuring ToVinyl4")
add_subdirectory(ToVinyl4)
message(STATUS "Configuring ToneSlant")
add_subdirectory(ToneSlant)
message(STATUS "Configuring TransDesk")
add_subdirectory(TransDesk)
message(STATUS "Configuring TremoSquare")
add_subdirectory(TremoSquare)
message(STATUS "Configuring Tremolo")
add_subdirectory(Tremolo)
message(STATUS "Configuring Trianglizer")
add_subdirectory(Trianglizer)
message(STATUS "Configuring TripleSpread")
add_subdirectory(TripleSpread)
message(STATUS "Configuring Tube")
add_subdirectory(Tube)
message(STATUS "Configuring Tube2")
add_subdirectory(Tube2)
message(STATUS "Configuring TubeDesk")
add_subdirectory(TubeDesk)
message(STATUS "Configuring UltrasonX")
add_subdirectory(UltrasonX)
message(STATUS "Configuring Ultrasonic")
add_subdirectory(Ultrasonic)
message(STATUS "Configuring UltrasonicLite")
add_subdirectory(UltrasonicLite)
message(STATUS "Configuring UltrasonicMed")
add_subdirectory(UltrasonicMed)
message(STATUS "Configuring UnBox")
add_subdirectory(UnBox)
message(STATUS "Configuring VariMu")
add_subdirectory(VariMu)
message(STATUS "Configuring VerbSixes")
add_subdirectory(VerbSixes)
message(STATUS "Configuring Verbity")
add_subdirectory(Verbity)
message(STATUS "Configuring Verbity2")
add_subdirectory(Verbity2)
message(STATUS "Configuring Vibrato")
add_subdirectory(Vibrato)
message(STATUS "Configuring VinylDither")
add_subdirectory(VinylDither)
message(STATUS "Configuring VoiceOfTheStarship")
add_subdirectory(VoiceOfTheStarship)
message(STATUS "Configuring VoiceTrick")
add_subdirectory(VoiceTrick)
message(STATUS "Configuring Weight")
add_subdirectory(Weight)
message(STATUS "Configuring Wider")
add_subdirectory(Wider)
message(STATUS "Configuring Wolfbot")
add_subdirectory(Wolfbot)
message(STATUS "Configuring XBandpass")
add_subdirectory(XBandpass)
message(STATUS "Configuring XHighpass")
add_subdirectory(XHighpass)
message(STATUS "Configuring XLowpass")
add_subdirectory(XLowpass)
message(STATUS "Configuring XNotch")
add_subdirectory(XNotch)
message(STATUS "Configuring XRegion")
add_subdirectory(XRegion)
message(STATUS "Configuring YBandpass")
add_subdirectory(YBandpass)
message(STATUS "Configuring YHighpass")
add_subdirectory(YHighpass)
message(STATUS "Configuring YLowpass")
add_subdirectory(YLowpass)
message(STATUS "Configuring YNotBandpass")
add_subdirectory(YNotBandpass)
message(STATUS "Configuring YNotHighpass")
add_subdirectory(YNotHighpass)
message(STATUS "Configuring YNotLowpass")
add_subdirectory(YNotLowpass)
message(STATUS "Configuring YNotNotch")
add_subdirectory(YNotNotch)
message(STATUS "Configuring YNotch")
add_subdirectory(YNotch)
message(STATUS "Configuring ZBandpass")
add_subdirectory(ZBandpass)
message(STATUS "Configuring ZBandpass2")
add_subdirectory(ZBandpass2)
message(STATUS "Configuring ZHighpass")
add_subdirectory(ZHighpass)
message(STATUS "Configuring ZHighpass2")
add_subdirectory(ZHighpass2)
message(STATUS "Configuring ZLowpass")
add_subdirectory(ZLowpass)
message(STATUS "Configuring ZLowpass2")
add_subdirectory(ZLowpass2)
message(STATUS "Configuring ZNotch")
add_subdirectory(ZNotch)
message(STATUS "Configuring ZNotch2")
add_subdirectory(ZNotch2)
message(STATUS "Configuring ZOutputStage")
add_subdirectory(ZOutputStage)
message(STATUS "Configuring ZRegion")
add_subdirectory(ZRegion)
message(STATUS "Configuring ZRegion2")
add_subdirectory(ZRegion2)
message(STATUS "Configuring Zoom")
add_subdirectory(Zoom)
message(STATUS "Configuring curve")
add_subdirectory(curve)
message(STATUS "Configuring kBeyond")
add_subdirectory(kBeyond)
message(STATUS "Configuring kCathedral")
add_subdirectory(kCathedral)
message(STATUS "Configuring kCathedral2")
add_subdirectory(kCathedral2)
message(STATUS "Configuring kCathedral3")
add_subdirectory(kCathedral3)
message(STATUS "Configuring kCathedral4")
add_subdirectory(kCathedral4)
message(STATUS "Configuring kCathedral5")
add_subdirectory(kCathedral5)
message(STATUS "Configuring kChamberAR")
add_subdirectory(kChamberAR)
message(STATUS "Configuring kCosmos")
add_subdirectory(kCosmos)
message(STATUS "Configuring kGuitarHall")
add_subdirectory(kGuitarHall)
message(STATUS "Configuring kGuitarHall2")
add_subdirectory(kGuitarHall2)
message(STATUS "Configuring kPlate140")
add_subdirectory(kPlate140)
message(STATUS "Configuring kPlate240")
add_subdirectory(kPlate240)
message(STATUS "Configuring kPlateA")
add_subdirectory(kPlateA)
message(STATUS "Configuring kPlateB")
add_subdirectory(kPlateB)
message(STATUS "Configuring kPlateC")
add_subdirectory(kPlateC)
message(STATUS "Configuring kPlateD")
add_subdirectory(kPlateD)
message(STATUS "Configuring uLawDecode")
add_subdirectory(uLawDecode)
message(STATUS "Configuring uLawEncode")
add_subdirectory(uLawEncode)
